fixed auth button mobile styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,6 @@ html {
 
 .jumbotron {
   background-image: linear-gradient(to right top, #7b3ece, #556ae9, #288bf8, lightblue);
-  overflow: auto;
   color: white;
   font-family: 'Sniglet', cursive;
   text-shadow: 2px 2px 8px rgb(151, 213, 255);
@@ -59,11 +58,6 @@ iframe{
   min-width: 100%;
 }
 
-iframe{
-  min-width: 100%;
-  min-height: 100%;
-}
-
 .clearfix {
    overflow: auto;
 }
@@ -96,6 +90,11 @@ min-height: 25px;
   background-color: lightblue;
 }
 
+.auth-btn:hover {
+  box-shadow: 3px 3px 5px black;
+}
+
+
 .contentDiv-btn1, .contentDiv-btn2 {
   min-height: 40px;
   border-radius: 10px;
@@ -115,9 +114,7 @@ min-height: 25px;
 
 }
 
-.auth-btn:hover {
-  box-shadow: 3px 3px 5px black;
-}
+
 
 .btn-create, .btn-delete {
   background-color: #ce3e92;
@@ -226,8 +223,16 @@ min-height: 25px;
   padding: 25px;
 }
 
+
+@media (max-width: 450px) {
+
+    .auth-btn {
+      font-size: 11px;
+    }
   
-  @media (max-width: 450px) {
+    .jumbotron {
+      overflow: hidden;
+    }
 
     .jumbotron p {
       visibility: hidden;
@@ -237,17 +242,16 @@ min-height: 25px;
     .jumbotron h1{
         font-size: 50px;
         };
-    
-    .jumbotron p {
-      visibility: hidden;
-    }
-    
+
+    .jumbotron {
+      overflow: hidden;
+      }
     #welcome-h1 {
       margin: 0px 0px 2px;
     }
 
     #welcome-p{
-      font-size: 16px;
+      font-size: 14px;
 
       }
 
